tests/baselines/reference/computedPropertyNames7_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames7_ES5.ts(5,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames7_ES5.ts (1 errors) ====
    enum E {
        member
    }
    var v = {
        [E.member]: 0
        ~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }